--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -5,7 +5,12 @@
   flex-direction: column;
   align-items: center;
 
+  &--close {
+    display: none;
+  }
+
   @media (min-width: $desktop-width) {
+    display: flex;
     min-height: 50px;
     flex-direction: row;
     justify-content: center;
@@ -14,14 +19,19 @@
 }
 
 .menu-item {
-  margin: 0 8px;
-  font-size: 24px;
-  line-height: 60px;
-  letter-spacing: 0.5;
+  width: 100%;
+  font-size: 26px;
+  line-height: 50px;
   font-weight: 700;
+  text-align: center;
 
-  &:last-child {
-    margin-right: 0;
+  @media (min-width: $desktop-width) {
+    width: auto;
+    margin: 0 8px;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
